--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,9 +3,5 @@
     "C_Cpp.errorSquiggles": "enabled",
     "C_Cpp.autocomplete": "default",
     "C_Cpp.default.configurationProvider": "ms-vscode.makefile-tools",
-    "files.associations": {
-        "device.h": "c",
-        "init.h": "c",
-        "dev_printk.h": "c"
-    }
+    "C_Cpp.autoAddFileAssociations": false
 }
